refactor(dto): convert all 23 DTOs to pure Java records and modernize callers